# ThreeD

./: .gitignore  Dockerfile  docker-compose.yml  manage.py  pyproject.toml
Objects3D/: asgi.py  settings.py  urls.py  wsgi.py
ThreeD/: apps.py  urls.py  views.py
ThreeD/static/css/: cube.css  dod.css  ico.css  icosub.css  oct.css  thet.css
ThreeD/static/js/: cube.js  dod.js  dot.js  ico.js  icosub.js  oct.js  teth.js
ThreeD/templates/: cubes.html
ThreeD/templates/components/: cube.html  dod.html  dot.html  ico.html  icosub.html  oct.html  teth.html
