[tool.poetry]
name = "objects3d"
version = "0.1.0"
description = "3d Objects"
authors = ["Kamyar Bashar <kamyar.bashar@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
Django = "^5.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
